apps/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${forgejo_service_name}
  namespace: ${forgejo_namespace}
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: app
spec:
  replicas: ${forgejo_replicas}
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/component: app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: forgejo
          image: ${forgejo_image}
          imagePullPolicy: ${forgejo_image_pull_policy}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /api/healthz
              port: http
            failureThreshold: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: ${forgejo_requests_cpu}
              memory: ${forgejo_requests_memory}
              ephemeral-storage: ${forgejo_requests_ephemeral_storage}
            limits:
              memory: ${forgejo_limits_memory}
              ephemeral-storage: ${forgejo_limits_ephemeral_storage}
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ${forgejo_service_name}-data
